[tool.poetry]
name = "janeliadatastandards"
version = "0.1.0"
description = "An effort to consolidate Janelia's bioimaging schemas, standards, and data formats."
authors = ["Your Name <you@example.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.4"
mkdocs = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
